--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color:white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.small {
+  box-shadow:
+    0 0 7px 3px #fff,
+    /* inner white */
+    0 0 12px 7px #787777,
+    /* middle magenta */
+    0 0 15px 11px #dfcca6;
+  /* outer cyan */
+}
+.medium {
+  box-shadow:
+    0 0 10px 2px #fff,
+    /* inner white */
+    0 0 20px 10px #787777,
+    /* middle magenta */
+    0 0 25px 17px #00ffe5;
+  /* outer cyan */
+}
+
+.large {
+  box-shadow:
+    0 0 15px 7px #fff,
+    /* inner white */
+    0 0 25px 15px #787777,
+    /* middle magenta */
+    0 0 30px 22px #FFAA00;
+  /* outer cyan */
 }
